# FreeCAD

src/App/: Application.cpp
src/Gui/: CMakeLists.txt  FileDialog.cpp  FileDialog.h  PythonWrapper.cpp
src/Gui/Icons/: resource.qrc
src/Mod/Draft/: Draft.py  DraftGui.py
src/Mod/Measure/App/: AppMeasure.cpp  AppMeasurePy.cpp  CMakeLists.txt  HandlerManager.cpp  HandlerManager.h  HandlerTable.h  LinkCrawler.cpp  LinkCrawler.h  MapKeeper.cpp  MapKeeper.h  MeasureAngle.cpp  MeasureAngle.h  MeasureArea.cpp  MeasureArea.h  MeasureBase.cpp  MeasureBase.h  MeasureDistance.cpp  MeasureDistance.h  MeasureLength.cpp  MeasureLength.h  MeasurePosition.cpp  MeasurePosition.h  MeasureRadius.cpp  MeasureRadius.h  Measurement.cpp  Measurement.h  ShapeFinder.cpp  ShapeFinder.h  SubnameHelper.cpp  SubnameHelper.h
src/Mod/Part/App/: CMakeLists.txt  FT2FC.cpp  Measure.cpp  Measure.h  MeasureClient.cpp  MeasureClient.h  MeasureInfo.h
src/Mod/Part/Gui/: TaskDimension.cpp
src/Mod/Spreadsheet/App/: AppSpreadsheet.cpp  AppSpreadsheetPy.cpp  CMakeLists.txt
src/Mod/Spreadsheet/Gui/: AppSpreadsheetGui.cpp
src/Mod/TechDraw/: CMakeLists.txt  InitGui.py
src/Mod/TechDraw/App/: AppTechDraw.cpp  AppTechDrawPy.cpp  CMakeLists.txt  Cosmetic.cpp  Cosmetic.h  CosmeticExtension.cpp  CosmeticExtension.h  DiagramPy.xml  DiagramPyImp.cpp  DiagramSymbolPy.xml  DiagramSymbolPyImp.cpp  DiagramTracePy.xml  DiagramTracePyImp.cpp  DimensionAutoCorrect.cpp  DimensionReferences.cpp  DimensionReferences.h  DrawBrokenView.cpp  DrawBrokenView.h  DrawBrokenViewPy.xml  DrawBrokenViewPyImp.cpp  DrawComplexSection.cpp  DrawComplexSection.h  DrawDimHelper.cpp  DrawGeomHatch.cpp  DrawGeomHatch.h  DrawLeaderLine.cpp  DrawLeaderLine.h  DrawPage.cpp  DrawPage.h  DrawSVGTemplate.cpp  DrawSVGTemplate.h  DrawUtil.cpp  DrawUtil.h  DrawView.cpp  DrawView.h  DrawViewDetail.cpp  DrawViewDetail.h  DrawViewDimension.cpp  DrawViewDimension.h  DrawViewDimensionPyImp.cpp  (+26 more)
src/Mod/TechDraw/App/Diagram/: Diagram.cpp  Diagram.h  DiagramSymbol.cpp  DiagramSymbol.h  DiagramTrace.cpp  DiagramTrace.h  PropertyDiagramSymbolList.cpp  PropertyDiagramSymbolList.h  PropertyDiagramTraceList.cpp  PropertyDiagramTraceList.h  SymbolPort.cpp  SymbolPort.h  SymbolRepresentation.cpp  SymbolRepresentation.h  TraceRoute.cpp  TraceRoute.h  TraceWaypoint.cpp  TraceWaypoint.h
src/Mod/TechDraw/ConversionUtilities/: updateLeaderLines.py
src/Mod/TechDraw/Gui/: AppTechDrawGui.cpp  CMakeLists.txt  Command.cpp  CommandCreateDims.cpp  CommandDecorate.cpp  CommandExtensionPack.cpp  DiagramAddSymbol.ui  DiagramAddTrace.ui  DiagramRemoveSymbol.ui  DiagramRemoveTrace.ui  DiagramSymbolAdd.ui  DiagramTraceAdd.ui  DimensionValidators.cpp  DlgPrefsTechDrawTemplate.cpp  DlgPrefsTechDrawTemplate.h  DlgPrefsTechDrawTemplate.ui  DrawGuiUtil.cpp  DrawGuiUtil.h  Grabber3d.cpp  MDIViewPage.cpp  PagePrinter.cpp  PreferencesGui.cpp  PreferencesGui.h  QGEPath.cpp  QGIEdge.cpp  QGIEdge.h  QGILeaderLine.cpp  QGISVGTemplate.cpp  QGITemplate.cpp  QGITemplate.h  QGIView.cpp  QGIView.h  QGIViewBalloon.cpp  QGIViewBalloon.h  QGIViewDimension.cpp  QGIViewDimension.h  QGIViewPart.cpp  QGIViewPart.h  QGIWeldSymbol.cpp  QGMText.cpp  (+33 more)
src/Mod/TechDraw/Gui/Resources/: TechDraw.qrc
src/Mod/TechDraw/TechDrawDiagram/: CommandAddDiagram.py  CommandAddSymbol.py  CommandAddTrace.py  CommandEditTrace.py  CommandRemoveSymbol.py  CommandRemoveTrace.py  Rez.py  TDDiagramTypeManager.py  TDDiagramUtil.py  TDDiagramWorkers.py  TaskAddSymbol.py  TaskAddTrace.py  TaskRemoveSymbol.py  TaskRemoveTrace.py  __init__.py
src/Mod/TechDraw/TechDrawDiagram/Pictures/: DiagramDirectories.dia  DiagramOverview.dia
src/Mod/TechDraw/TechDrawDiagram/TDDiagramPainters/: PathPainter.py  SvgPainter.py  TracePencil.py  __init__.py
src/Mod/TechDraw/TechDrawTools/: CommandCopyView.py  CommandMoveView.py  TDToolsMovers.py  TDToolsUtil.py  TaskCopyView.py  TaskFillTemplateFields.py  TaskMoveView.py  __init__.py
